snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-sources.jar.sha1
0cfb77d72664faa7fc366bbb701d2e31926a2c86